--- a/css/blocks/product.css
+++ b/css/blocks/product.css
@@ -22,7 +22,7 @@
   left: 0;
   width: 100%;
   height: 100%;
- display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 24px;
@@ -39,6 +39,7 @@
 
 .product__image-navigation {
   position: absolute;
+  z-index: 2;
   bottom: 5px;
   width: 100%;
   display: flex;
